--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vite-plugin-glsl": "^1.0.2"
   },
   "dependencies": {
+    "@theatre/core": "^0.7.0",
+    "@theatre/studio": "^0.7.0",
     "gsap": "^3.12.2",
     "lil-gui": "^0.18.2",
     "three": "^0.157.0"
